lecture_2/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: main
    labels:
        name: main
