lecture_2/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main
  namespace: main
  labels:
    app: main
spec:
  replicas: 3
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
      - name: main-container
        image: docker.io/library/main:latest
        imagePullPolicy: "Never" # for local in minikube
        ports:
        - containerPort: 8080
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
