lecture_2/kubernetes/service_node_port.yaml
apiVersion: v1
kind: Service
metadata:
  name: main
  namespace: main
spec:
  type: NodePort
  # Метки селектора, использованные в шаблоне подов при создании объекта Deployment.
  selector:
    app: main
  ports:
    - name: http
      protocol: TCP
      port: 80 # Порт сетевого балансировщика, на котором будут обслуживаться пользовательские запросы.
      targetPort: 8080 # Порт контейнера, на котором доступно приложение.
      nodePort: 30007 # Необязательное поле. По умолчанию и для удобства плоскость управления Kubernetes выделит порт из диапазона (по умолчанию: 30000-32767).
